# regex-rumble

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
regex_rumble/: __init__.py  analytics.py  app.py  bundle.py  cli.py  engine.py  flavors.py  mcp.py  redos.py  sensei.py  speedrun.py  state.py
regex_rumble/packs/: __init__.py  speedrun_default.json
tests/: test_analytics.py  test_app_shell.py  test_bundle.py  test_engine.py  test_flavors.py  test_mcp.py  test_redos.py  test_sensei.py  test_smoke.py  test_speedrun.py  test_state.py
