[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regex-rumble"
version = "0.1.0"
description = "A terminal dojo for regex training. Write a pattern. The AI sensei tries to defeat it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "rwrife" }]
keywords = ["regex", "tui", "cli", "dojo", "game", "textual"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.60",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
regex-rumble = "regex_rumble.cli:app"

[project.urls]
Homepage = "https://github.com/rwrife/regex-rumble"
Issues = "https://github.com/rwrife/regex-rumble/issues"

[tool.hatch.build.targets.wheel]
packages = ["regex_rumble"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
